--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,28 +1,11 @@
 site_name: RP-Helpdesk Docs
-site_url: https://docs.rp-helpdesk.com/
-repo_name: Rune004/RP-Helpdesk(MKDocs)
-repo_url: https://github.com/rune004/mkdocs
-palette: 
-
-
-
-    # Palette toggle for light mode
-    - scheme: default
-      toggle:
-        icon: material/brightness-7 
-
-
-        name: Switch to dark mode
-
-    # Palette toggle for dark mode
-    - scheme: slate
-      toggle:
-        icon: material/brightness-4
-        name: Switch to light mode
+site_url: https://rp-helpdesk.com/
+repo_name: Rune004/mkdocs
+repo_url: https://github.com/rune004/mkdocs/
 nav:
     - Introduction: 
-        - 'Welcome': 'index.md'
-        - 'About': 'about.md'
+        - 'Welcome To RPH': 'index.md'
+        - 'About RPH': 'about.md'
         - 'Our Blog Posts': 
           - 'Coming Soon': '.'
     - Documentation:
@@ -41,13 +24,35 @@ nav:
           - 'What is Portainer?': 'portainer.md'
           - 'Custom Docker-Compose': 'docker-customcompose.md'
 theme:
+  icon:
+      repo: fontawesome/brands/gitkraken
   name: material
   palette:
-    scheme: slate
-    primary: red
-    accent: red
-    icon:
-      repo: fontawesome/brands/git-alt
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+      primary: black
+      accent: red
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default 
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+      primary: black
+      accent: red
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
+      primary: black
+      accent: red
   features:
     - navigation.tabs
     - navigation.tabs.sticky
@@ -62,7 +67,16 @@ markdown_extensions:
     - toc:
         permalink: "#"
         separator: "_"
-copyright: Copyright &copy; 2018 - 2022 RP-Helpdesk
+copyright: Copyright &copy; 2022 RP-Helpdesk 
 extra:
   generator: false
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/rune004
+
+    - icon: fontawesome/brands/linkedin
+      link: https://twitter.com/squidfunk
+    
+    - icon: fontawesome/brands/slack
+      link: https://twitter.com/squidfunk
   
