--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,17 +29,17 @@ theme:
   icon:
       repo: fontawesome/brands/gitkraken
       admonition:
-        note: octicons/tag-16
-        abstract: octicons/checklist-16
-        info: octicons/info-16
-        tip: octicons/squirrel-16
-        success: octicons/check-16
+        note: material/notebook-edit
+        abstract: material/file-edit
+        info: material/notebook-check
+        tip: material/tooltip-check-outline
+        success: simple/riseup
         question: octicons/question-16
-        warning: octicons/alert-16
+        warning: fontawesome/solid/person-military-pointing
         failure: octicons/x-circle-16
         danger: octicons/zap-16
-        bug: octicons/bug-16
-        example: octicons/beaker-16
+        bug: material/docker
+        example: material/monitor-edit
         quote: octicons/quote-16
   name: material
   palette:
@@ -49,7 +49,7 @@ theme:
         icon: material/brightness-auto
         name: Switch to light mode
       primary: black
-      accent: red
+      accent: indigo
 
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
@@ -58,7 +58,7 @@ theme:
         icon: material/brightness-7
         name: Switch to dark mode
       primary: black
-      accent: red
+      accent: indigo
 
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
@@ -67,16 +67,29 @@ theme:
         icon: material/brightness-4
         name: Switch to system preference
       primary: black
-      accent: red
+      accent: indigo
   features:
     - navigation.tabs
     - navigation.tabs.sticky
     - navigation.top
+    - content.tooltips
 markdown_extensions:
+    - def_list
+    - md_in_html
+    - footnotes
+    - tables
     - admonition
+    - pymdownx.betterem
+    - pymdownx.critic
+    - pymdownx.caret
+    - pymdownx.keys
+    - pymdownx.mark
+    - pymdownx.tilde
     - pymdownx.details
     - pymdownx.superfences
-    - md_in_html
+    - pymdownx.inlinehilite
+    - pymdownx.smartsymbols
+    - pymdownx.snippets
     - pymdownx.tabbed:
         alternate_style: true
     - pymdownx.tasklist:
