--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,8 @@ repo_name: Rune004/mkdocs
 repo_url: https://github.com/rune004/mkdocs/
 use_directory_urls: false
 nav:
-    - Introduction: 
+    - Introduction:
+      - Introduction To RPH:
         - Welcome To RPH: 'index.md'
         - About RPH: 'about.md'
     - Documentation:
@@ -69,37 +70,81 @@ theme:
       primary: black
       accent: indigo
   features:
-    - navigation.tabs
-    - navigation.tabs.sticky
-    - navigation.top
+    # - announce.dismiss
+    - content.code.annotate
+    # - content.tabs.link
     - content.tooltips
+    # - header.autohide
+    # - navigation.expand
+    - navigation.indexes
+    # - navigation.instant
+    # - navigation.prune
+    - navigation.sections
+    - navigation.tabs
+    # - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+    - toc.follow
+    # - toc.integrate
 markdown_extensions:
-    - def_list
-    - md_in_html
-    - footnotes
-    - tables
-    - admonition
-    - pymdownx.betterem
-    - pymdownx.critic
-    - pymdownx.caret
-    - pymdownx.keys
-    - pymdownx.mark
-    - pymdownx.tilde
-    - pymdownx.details
-    - pymdownx.superfences
-    - pymdownx.inlinehilite
-    - pymdownx.smartsymbols
-    - pymdownx.snippets
-    - pymdownx.tabbed:
-        alternate_style: true
-    - pymdownx.tasklist:
-        custom_checkbox: true
-    - attr_list:
-    - toc:
-        permalink: "#"
-        separator: "_"
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - toc:
+      permalink: true
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:materialx.emoji.twemoji
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.magiclink:
+      repo_url_shorthand: true
+      user: squidfunk
+      repo: mkdocs-material
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+plugins:
+  - search
+  - git-authors
+  - git-revision-date-localized
+  - git-committers:
+      repository: rune004/mkdocs
+      branch: master
+  - minify:
+      minify_html: true
 copyright: Copyright &copy; 2022 RP-Helpdesk 
+extra_css:
+  - stylesheets/extra.css
+extra_javascript:
+  - javascripts/extra.js
 extra:
+  analytics:
+    provider: google
+    property: !ENV GOOGLE_ANALYTICS_KEY
   generator: false
   social:
     - icon: fontawesome/brands/github
