--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,12 +32,14 @@ nav:
           - 'What is Portainer?': 'portainer.md'
           - 'Setup Portainer': 'portainer-setup.md'
           - 'Custom Docker-Compose': 'docker-customcompose.md'
+      - Unraid Documentation:
+          - 'What is Unraid': 'docker.md'
     - Blog:
       - Servers: 
         - 'Power Efficient Home Server': 'power-efficient-home-server.md'
     - Software:
       - Our Software:
-        - 'Windows-Auto-Installer': 'windows-auto-installer.md'
+        - 'Windows Auto Installer': 'windows-auto-installer.md'
 theme:
   icon:
       repo: fontawesome/brands/gitkraken
