--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
-site_name: RP-Helpdesk Docs
+site_name: RP-Helpdesk
 site_url: https://rp-helpdesk.com/
-repo_name: Rune004/mkdocs
-repo_url: https://github.com/rune004/mkdocs/
+repo_name: RP-Helpdesk/Rune004
+repo_url: https://github.com/rune004/
+edit_uri: mkdocs/edit/main/docs/
 use_directory_urls: false
 nav:
     - Introduction:
@@ -9,50 +10,51 @@ nav:
         - Welcome To RPH: 'index.md'
         - About RPH: 'about.md'
       - What is?: 
-        - What is Ansible?: 'ansible.md'
-        - What is Proxmox?: 'proxmox.md'
-        - What is Docker?: 'docker.md'
-        - What is Portainer?: 'portainer.md'
-        - What is Unraid?: 'unraid.md'
+        - What is Ansible?: 'ansible/ansible.md'
+        - What is Proxmox?: 'proxmox/proxmox.md'
+        - What is Docker?: 'docker/docker.md'
+        - What is Portainer?: 'portainer/portainer.md'
+        - What is Unraid?: 'unraid/unraid.md'
       - Our Software:
-        - 'Windows Auto Installer': 'windows-auto-installer.md' 
+        - 'Windows Auto Installer': 'software/windows-auto-installer.md' 
     - Documentation:
       - Ansible Documentation:
-        - 'What is Ansible?': 'ansible.md'
+        - 'What is Ansible?': 'ansible/ansible.md'
         - Automated Test Environment: 
-          - 'Setup/Install Ansible': 'ansible-setup.md'
-          - 'Configure a Ansible playbook': 'ansible-playbook.md'
-          - 'Use a Ansible-playbook': 'ansible-use.md'
+          - 'Setup/Install Ansible': 'ansible/ansible-setup.md'
+          - 'Configure a Ansible playbook': 'ansible/ansible-playbook.md'
+          - 'Use a Ansible-playbook': 'ansible/ansible-use.md'
       - Proxmox Documentation:
-        - 'What is Proxmox?': 'proxmox.md'
-        - 'Proxmox Errors': 'proxmox-errors.md'
+        - 'What is Proxmox?': 'proxmox/proxmox.md'
+        - 'Proxmox Errors': 'proxmox/proxmox-errors.md'
       - Docker Documentation:
-        - 'What is Docker?': 'docker.md'
-        - 'Setup Docker': 'portainer-setup.html#install-docker-ce'
+        - 'What is Docker?': 'docker/docker.md'
+        - 'Setup Docker': 'portainer/portainer-setup.html#install-docker-ce'
         - Portainer:
-          - 'What is Portainer?': 'portainer.md'
-          - 'Setup Portainer': 'portainer-setup.md'
-          - 'Custom Docker-Compose': 'docker-customcompose.md'
+          - 'What is Portainer?': 'portainer/portainer.md'
+          - 'Setup Portainer': 'portainer/portainer-setup.md'
+          - 'Custom Docker-Compose': 'docker/docker-customcompose.md'
       - Unraid Documentation:
-        - 'What is Unraid': 'unraid.md'
+        - 'What is Unraid': 'unraid/unraid.md'
         - Unraid Getting Started:
-          - 'Cloudflare Tunnel': 'unraid-cloudflared.md'  
+          - 'Cloudflare Tunnel': 'unraid/unraid-cloudflared.md'  
     - Blog:
-      - 'Blog Overview': 'blog.md'
+      - 'Blog Overview': 'blog/blog.md'
       - Servers: 
-        - 'Power Efficient Home Server': 'power-efficient-home-server.md'
+        - 'Power Efficient Home Server': 'blog/power-efficient-home-server.md'
       - Configure:
-        - 'Setup Local Internet Security': 'setup-local-internet-security.md'
+        - 'Setup Local Internet Security': 'blog/setup-local-internet-security.md'
     - Software:
       - Our Software:
-        - 'Windows Auto Installer': 'windows-auto-installer.md'
+        - 'Windows Auto Installer': 'software/windows-auto-installer.md'
       - Software we recommend: 
-        - 'Self-Hosted Vaultwarden': 'docker-customcompose.html#vaultwarden'
-        - 'Self-Hosted Seafile': 'docker-customcompose.html#seafile'
-        - 'Self-Hosted Vikunja': 'docker-customcompose.html#vikunja'
-        - 'Self-Hosted Flamedashboard': 'docker-customcompose.html#flamedashboard' 
+        - 'Self-Hosted Vaultwarden': 'docker/docker-customcompose.html#vaultwarden'
+        - 'Self-Hosted Seafile': 'docker/docker-customcompose.html#seafile'
+        - 'Self-Hosted Vikunja': 'docker/docker-customcompose.html#vikunja'
+        - 'Self-Hosted Flamedashboard': 'docker/docker-customcompose.html#flamedashboard' 
 theme:
   icon:
+      logo: fontawesome/brands/gitkraken
       repo: fontawesome/brands/gitkraken
       admonition:
         note: material/notebook-edit
@@ -157,8 +159,9 @@ plugins:
   - git-authors
   - git-revision-date-localized
   - git-committers:
+      enabled: True
       repository: rune004/mkdocs
-      branch: master
+      branch: main
   - minify:
       minify_html: true
 copyright: Copyright &copy; 2022 RP-Helpdesk 
@@ -174,8 +177,5 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/rune004
-
-    - icon: fontawesome/brands/linkedin
-      link: https://twitter.com/squidfunk
 
 
