--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: RP-Helpdesk
 site_url: https://rp-helpdesk.com/
-repo_name: RP-Helpdesk/Rune004
-repo_url: https://github.com/rune004/
-edit_uri: mkdocs/edit/main/docs/
+repo_name: Github/Rune004
+repo_url: https://github.com/rune004?tab=repositories
+edit_uri: https://github.com/rune004/mkdocs/edit/main/docs/
 use_directory_urls: false
 nav:
     - Introduction:
@@ -100,16 +100,16 @@ theme:
   features:
     # - announce.dismiss
     - content.code.annotate
-    # - content.tabs.link
+    - content.tabs.link
     - content.tooltips
     # - header.autohide
     # - navigation.expand
     - navigation.indexes
-    # - navigation.instant
+    - navigation.instant
     # - navigation.prune
     - navigation.sections
     - navigation.tabs
-    # - navigation.tabs.sticky
+    - navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
     - search.highlight
